<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CompassFragment">

    <ImageView
        android:id="@+id/iv_compass"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:rotation="45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/compass"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/distance_unknown" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_set_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/button_text_color"
            app:strokeColor="@color/button_stroke_color"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintTop_toBottomOf="@id/mtv_distance"
            android:layout_marginTop="5dp"
            android:text="@string/destination"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_destination_pointer"
        android:layout_width="@dimen/destination_pointer_size"
        android:layout_height="@dimen/destination_pointer_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:textSize="30sp"
        android:src="@drawable/arrow"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_enable_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/button_text_color"
        app:strokeColor="@color/button_stroke_color"
        android:layout_marginBottom="50dp"
        android:text="@string/enable_gps"/>

</androidx.constraintlayout.widget.ConstraintLayout>