<resources>
    <string name="app_name">Compass</string>
    <string name="distance_unknown">distance unknown</string>
    <string name="distance_meters">%1$d m</string>
    <string name="destination">destination</string>
    <string name="destination_unknown">destination unknown</string>
    <string name="enable_gps">enable gps</string>
    <string name="permission_rejection_text">Location permission is needed for position tracking and distance calculations.</string>
    <string name="select_destination">Select your destination</string>
    <string name="destination_saved">Destination saved</string>
    <string name="change_location_permission">Change location permission in app settings</string>
    <string name="no_gyroscope_title">Gyroscope not found</string>
    <string name="no_gyroscope_message">Gyroscope is crucial for this app functionality, without it we can\'t perform any actions. The app will now exit.</string>
    <string name="ok">OK</string>
</resources>